update qa_results เหลือรูปภาพ
